--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
-    "js-beautify": "^1.8.6"
+    "js-beautify": "^1.8.6",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
